@@ -1,0 +1,7 @@
+TOC {#HttpCurrentDatabaseTOC}
+=============================
+
+- @ref HttpCurrentDatabase
+  - @ref HttpCurrentDatabaseIntro
+  - @ref HttpCurrentDatabaseHttp
+    - @ref HttpCurrentDatabaseGet "GET /_api/current-database"
