@@ -7,6 +7,7 @@ ArangoDB for API Implementors (@VERSION) {#ImplementorManual}
 @CHAPTER_REF{RestEdge}
 @CHAPTER_REF{HttpCursor}
 @CHAPTER_REF{HttpQuery}
+@CHAPTER_REF{HttpCurrentDatabase}
 @CHAPTER_REF{HttpAqlFunctions}
 @CHAPTER_REF{HttpSimple}
 @CHAPTER_REF{HttpCollection}
