@@ -9,6 +9,7 @@ rspec --color --format d \
 	api-batch-spec.rb \
 	api-collection-spec.rb \
 	api-documents-spec.rb \
+	api-current-database-spec.rb \
 	api-graph-spec.rb \
 	rest-key-spec.rb \
 	rest-create-document-spec.rb \
@@ -25,7 +26,7 @@ rspec --color --format d \
 	api-cursor-spec.rb \
 	api-statistics-spec.rb \
 	api-simple-spec.rb \
-  api-structures.rb \
+        api-structures.rb \
 	api-transactions-spec.rb \
 	api-traversal-spec.rb \
         api-users-spec.rb 
