@@ -52,9 +52,7 @@ function DatabaseSuite () {
 ////////////////////////////////////////////////////////////////////////////////
 
     testName : function () {
-      if (internal.db.hasOwnProperty('_name')) {
-        assertEqual("_system", internal.db._name());
-      }
+      assertEqual("_system", internal.db._name());
     },
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -62,10 +60,16 @@ function DatabaseSuite () {
 ////////////////////////////////////////////////////////////////////////////////
 
     testPath : function () {
-      if (internal.db.hasOwnProperty('_path')) {
-        assertTrue(typeof internal.db._path() === "string");
-        assertTrue(internal.db._path() !== "");
-      }
+      assertTrue(typeof internal.db._path() === "string");
+      assertTrue(internal.db._path() !== "");
+    },
+
+////////////////////////////////////////////////////////////////////////////////
+/// @brief test _isSystem function
+////////////////////////////////////////////////////////////////////////////////
+
+    testIsSystem : function () {
+      assertTrue(typeof internal.db._isSystem() === "boolean");
     },
 
 ////////////////////////////////////////////////////////////////////////////////
